Modify site to final version 1

--- a/public/index.html
+++ b/public/index.html
@@ -25,8 +25,7 @@
   <meta property="og:description" content="Mission We exist to empower entrepreneurs to take charge of their business and their
 lives, by directing their most valuable resources: time &amp; money, towards what
 matters most to them.
-Have we caught your attention? We appreciate your feedback at this early stage of our product. Do not hesitate to contact us. In fact, if your interested, we’d love to give you a tour of the prototype we built.
-Send ✉️ Our values The Golden rule The Silver rule Transparency Humility Resourcefulness Imprint &amp; Privacy Policy Let’s keep it simple.">
+Our values The Golden rule The Silver rule Transparency Humility Resourcefulness Have we caught your attention? We appreciate your feedback at this early stage of our product. Do not hesitate to contact us. In fact, if your interested, we’d love to give you a tour of the prototype we built.">
   <meta property="og:locale" content="en">
   <meta property="og:type" content="website">
     <meta property="og:image" content="http://localhost:1313/images/share-image.png">
@@ -38,17 +37,15 @@ Send ✉️ Our values The Golden rule The Silver rule Transparency Humility Res
   <meta name="twitter:description" content="Mission We exist to empower entrepreneurs to take charge of their business and their
 lives, by directing their most valuable resources: time &amp; money, towards what
 matters most to them.
-Have we caught your attention? We appreciate your feedback at this early stage of our product. Do not hesitate to contact us. In fact, if your interested, we’d love to give you a tour of the prototype we built.
-Send ✉️ Our values The Golden rule The Silver rule Transparency Humility Resourcefulness Imprint &amp; Privacy Policy Let’s keep it simple.">
+Our values The Golden rule The Silver rule Transparency Humility Resourcefulness Have we caught your attention? We appreciate your feedback at this early stage of our product. Do not hesitate to contact us. In fact, if your interested, we’d love to give you a tour of the prototype we built.">
 
   
   <meta itemprop="name" content="EcoF:re">
   <meta itemprop="description" content="Mission We exist to empower entrepreneurs to take charge of their business and their
 lives, by directing their most valuable resources: time &amp; money, towards what
 matters most to them.
-Have we caught your attention? We appreciate your feedback at this early stage of our product. Do not hesitate to contact us. In fact, if your interested, we’d love to give you a tour of the prototype we built.
-Send ✉️ Our values The Golden rule The Silver rule Transparency Humility Resourcefulness Imprint &amp; Privacy Policy Let’s keep it simple.">
-  <meta itemprop="wordCount" content="225">
+Our values The Golden rule The Silver rule Transparency Humility Resourcefulness Have we caught your attention? We appreciate your feedback at this early stage of our product. Do not hesitate to contact us. In fact, if your interested, we’d love to give you a tour of the prototype we built.">
+  <meta itemprop="wordCount" content="82">
   <meta itemprop="image" content="http://localhost:1313/images/share-image.png">
 
 
@@ -124,6 +121,15 @@ Send ✉️ Our values The Golden rule The Silver rule Transparency Humility Res
 lives, by directing their most valuable resources: time &amp; money, towards what<br>
 matters most to them.</p>
 <hr>
+<h1 id="our-values">Our values</h1>
+<ul>
+<li>The Golden rule</li>
+<li>The Silver rule</li>
+<li>Transparency</li>
+<li>Humility</li>
+<li>Resourcefulness</li>
+</ul>
+<hr>
 <p>Have we caught your attention? We appreciate your feedback at this early stage of our product. Do not hesitate to contact us. In fact, if your interested, we&rsquo;d love to give you a tour of the prototype we built.</p>
 <form
   
@@ -178,62 +184,6 @@ matters most to them.</p>
     >
       Send ✉️
     </button>
-  </div>
-</form>
-
-<hr>
-<h1 id="our-values">Our values</h1>
-<ul>
-<li>The Golden rule</li>
-<li>The Silver rule</li>
-<li>Transparency</li>
-<li>Humility</li>
-<li>Resourcefulness</li>
-</ul>
-<hr>
-<h1 id="imprint--privacy-policy">Imprint &amp; Privacy Policy</h1>
-<p>Let&rsquo;s keep it simple. This is our contact information:</p>
-<p>Jane Doe<br>
-1093 Simpson Square<br>
-May 73851, OK<br>
-USA</p>
-<p>E-mail: <a href="mailto:jane@doe.net">jane@doe.net</a><br>
-Phone: 580-689-0577</p>
-<p>We take data privacy very seriously, so we make sure not to store anything we do not need. We do not have any tracking service, no cookies or anything like that. If you decide to use the contact form or the newsletter sign up this information will be stored on Netlify, a service we use to host this website. You can approach us any time to have your data removed or simply retrieve information about what information we did store.</p>
-<hr>
-<h1 id="stay-in-touch">Stay in touch</h1>
-<p>Let&rsquo;s stay in touch. Sign up for our newsletter. Do not worry, we will not bother you with boring details. Expect nice &amp; tight updates about once or twice every 3 months.</p>
-<form
-  
-  class="pb-10"
-  id="newsletter-sign-up-form"
-  name="newsletter"
-  netlify
-  netlify-honeypot="you-like-this-field"
->
-  <div class="hidden">
-    <input name="you-like-this-field" />
-  </div>
-  <div class="grid grid-cols-1">
-    <div class="border-t border-teal-500 py-2">
-      <input
-        id="name"
-        name="name"
-        type="email"
-        required
-        class="appearance-none bg-transparent border-none w-full text-gray-700 mr-3 py-1 px-2 leading-tight focus:outline-none"
-        type="text"
-        placeholder="Your Email"
-        aria-label="Email"
-      />
-      <div class="md:text-center mx-auto">
-        <button
-          class="button button-primary mx-auto w-full rounded-lg px-4 md:px-5 my-5 py-3 md:py-4 bg-teal-500 hover:bg-teal-600 md:text-lg md:leading-tight text-white font-semibold leading-tight shadow-md md:text-center"
-        >
-          Sign up
-        </button>
-      </div>
-    </div>
   </div>
 </form>
 
