Add descriptions of Our Values.

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <link rel="shortcut icon" href="http://localhost:1313/images/favicon.png" type="image/png" />
   
   
-    <meta name="description" content="You don&#39;t even know what we can do for you!" />
+    <meta name="description" content="Live your best life by spending your time and money mindfully!" />
   
   
     <meta name="keywords" content="some, keywords, for, seo, you, know, google, duckduckgo, and, such" />
@@ -25,28 +25,37 @@
   <meta property="og:description" content="Mission We exist to empower entrepreneurs to take charge of their business and their
 lives, by directing their most valuable resources: time &amp; money, towards what
 matters most to them.
-Our values The Golden rule The Silver rule Transparency Humility Resourcefulness Have we caught your attention? We appreciate your feedback at this early stage of our product. Do not hesitate to contact us. In fact, if your interested, we’d love to give you a tour of the prototype we built.">
+Our values The Golden rule
+We believe in treating others as we would like others to treat us. This
+principle guides our everyday actions fostering respect, empathy and kindness
+with our customers, colleagues, and any other relationship or interaction. The Silver rule">
   <meta property="og:locale" content="en">
   <meta property="og:type" content="website">
-    <meta property="og:image" content="http://localhost:1313/images/share-image.png">
+    <meta property="og:image" content="http://localhost:1313/images/teaser.jpg">
 
   
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:image" content="http://localhost:1313/images/share-image.png">
+  <meta name="twitter:image" content="http://localhost:1313/images/teaser.jpg">
   <meta name="twitter:title" content="EcoF:re">
   <meta name="twitter:description" content="Mission We exist to empower entrepreneurs to take charge of their business and their
 lives, by directing their most valuable resources: time &amp; money, towards what
 matters most to them.
-Our values The Golden rule The Silver rule Transparency Humility Resourcefulness Have we caught your attention? We appreciate your feedback at this early stage of our product. Do not hesitate to contact us. In fact, if your interested, we’d love to give you a tour of the prototype we built.">
+Our values The Golden rule
+We believe in treating others as we would like others to treat us. This
+principle guides our everyday actions fostering respect, empathy and kindness
+with our customers, colleagues, and any other relationship or interaction. The Silver rule">
 
   
   <meta itemprop="name" content="EcoF:re">
   <meta itemprop="description" content="Mission We exist to empower entrepreneurs to take charge of their business and their
 lives, by directing their most valuable resources: time &amp; money, towards what
 matters most to them.
-Our values The Golden rule The Silver rule Transparency Humility Resourcefulness Have we caught your attention? We appreciate your feedback at this early stage of our product. Do not hesitate to contact us. In fact, if your interested, we’d love to give you a tour of the prototype we built.">
-  <meta itemprop="wordCount" content="82">
-  <meta itemprop="image" content="http://localhost:1313/images/share-image.png">
+Our values The Golden rule
+We believe in treating others as we would like others to treat us. This
+principle guides our everyday actions fostering respect, empathy and kindness
+with our customers, colleagues, and any other relationship or interaction. The Silver rule">
+  <meta itemprop="wordCount" content="261">
+  <meta itemprop="image" content="http://localhost:1313/images/teaser.jpg">
 
 
 
@@ -123,11 +132,29 @@ matters most to them.</p>
 <hr>
 <h1 id="our-values">Our values</h1>
 <ul>
-<li>The Golden rule</li>
-<li>The Silver rule</li>
-<li>Transparency</li>
-<li>Humility</li>
-<li>Resourcefulness</li>
+<li><strong>The Golden rule</strong><br>
+We believe in treating others as we would like others to treat us.  This<br>
+principle guides our everyday actions fostering respect, empathy and kindness<br>
+with our customers, colleagues, and any other relationship or interaction.</li>
+<li><strong>The Silver rule</strong><br>
+We don’t do unto others what we would not want done to us. We work in an<br>
+environment where we have good intent and not cause harm or discomfort to<br>
+others.  We strive to create a considerate and safe environment where trust and<br>
+collaboration can thrive.</li>
+<li><strong>Transparency</strong><br>
+We believe in open and honest communication. By sharing information freely and<br>
+clearly, we build trust, ensure accountability, and create a culture where<br>
+everyone is informed, engaged, and empowered to contribute to our collective<br>
+success.</li>
+<li><strong>Humility</strong><br>
+We recognize that we are part of a larger whole. We approach our work and<br>
+relationships with a spirit of learning and growth, valuing the contributions<br>
+and perspectives of others. By acknowledging our limitations and embracing<br>
+continuous improvement, we cultivate a culture of mutual respect and shared<br>
+progress.</li>
+<li><strong>Resourcefulness</strong><br>
+We emphasize finding effective ways to solve problems or achieve goals with<br>
+the limited means available.</li>
 </ul>
 <hr>
 <p>Have we caught your attention? We appreciate your feedback at this early stage of our product. Do not hesitate to contact us. In fact, if your interested, we&rsquo;d love to give you a tour of the prototype we built.</p>
