--- a/public/index.html
+++ b/public/index.html
@@ -54,7 +54,7 @@ Our values The Golden rule
 We believe in treating others as we would like others to treat us. This
 principle guides our everyday actions fostering respect, empathy and kindness
 with our customers, colleagues, and any other relationship or interaction. The Silver rule">
-  <meta itemprop="wordCount" content="243">
+  <meta itemprop="wordCount" content="246">
   <meta itemprop="image" content="http://localhost:1313/images/teaser.jpg">
 
 
@@ -85,7 +85,7 @@ with our customers, colleagues, and any other relationship or interaction. The S
         <div class="flex mt-6 justify-start md:justify-center">
           <a
   class="button button-primary rounded-lg px-4 md:px-5 py-3 md:py-4 bg-teal-500 hover:bg-teal-600 md:text-lg md:leading-tight text-white font-semibold leading-tight shadow-md"
-  href="#contact-form"
+  href="#get-in-touch"
   id="button-cta"
 >
   Get in touch
@@ -157,6 +157,7 @@ We emphasize finding effective ways to solve problems or achieve goals with<br>
 the limited means available.</li>
 </ul>
 <hr>
+<h1 id="get-in-touch">Get in touch</h1>
 <p>We appreciate your feedback at this early stage of our product.<br>
 Do not hesitate to contact us.<br>
 Please email us at <a href="mailto:ecofirelife@gmail.com">ecofirelife@gmail.com</a> .</p>
